# sys-call-rs

./: .travis.yml  Cargo.toml  README.md
examples/: stdout.rs
src/: lib.rs
src/platform/: linux-x86_64.rs
